Mon Dec 31 17:38:26 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc, main/main.c, main/query.c: no longer set LC_CTYPE
    to C since that breaks the braindead gettext.
  * dpkg-deb/build.c, lib/dbmodify.c, lib/vercmp.c, main/remove.c: Switch
    to using cisdigit and cisalpha.

Mon Dec 31 17:28:10 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * lib/utils.c: new file with general utility functions. Add
    cisalpha() and cisdigit() functions, similar to the ctype is*
    ones but which only accept C locale
  * lib/Makefile.in: add utils.c
  * include/dpkg.h: add utils.c functions

Mon Dec 31 15:25:46 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-architecture.pl: fix syntax error

Wed Nov 28 18:11:38 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.{1,pl}: Make dpkg-checkbuilddeps always
    check for build-essential.

Wed Nov 28 17:46:23 CST 2001 Adam Heath <doogie@debian.org>

  * debian/changelog: Note that the dselect.deb split closes a bug.

Wed Nov 28 17:40:52 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/update-alternatives.{pl,8}: Apply patch from debian bug 120924,
    to give update-alternatives a --list command.

Wed Nov 28 17:30:16 CST 2001 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: When parsing stdin, md5sum now displays '-' as the
    filename, to match textutils md5sum.

Wed Nov 28 17:20:28 CST 2001 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Copy dir from backup if the file is empty
    as well.

Sat Nov 17 17:20:52 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * doc/sv/Makefile.in: install dpkg-query and dpkg-deb manpages

Sat Nov 17 17:16:44 CET 2001 Wichert Akkerman <wakkerma@debian.org>

  * debian/control: add missing space in dpkg-doc description

Sat Nov 17 15:57:57 CET 2001 peter karlsson <peterk@debian.org>

  * doc/sv/dpkg-query.8, dpkg-deb.1: Initial Swedish translation.
    dpkg.8: Translation fixups.