@@ -35,13 +35,10 @@ i386-gnu		hurd-i386	undefined
 i386-gnu0.2		hurd-i386	undefined
 ia64-linux-gnu		ia64		ia64
 ia64-unknown-linux	ia64		ia64
-sh-linux-gnu		sh		sh
-sheb-linux-gnu		sheb		sheb
-shel-linux-gnu		sh		sh
-sh3-linux-gnu		sh		sh
-sh4-linux-gnu		sh		sh
-sh3eb-linux-gnu		sheb		sheb
-sh4eb-linux-gnu		sheb		sheb
+sh3-linux-gnu		sh3		sh3
+sh4-linux-gnu		sh4		sh4
+sh3eb-linux-gnu		sh3eb		sh3eb
+sh4eb-linux-gnu		sh4eb		sh4eb
 hppa-linux-gnu		hppa		hppa
 hppa1.1-linux-gnu	hppa		hppa
 hppa2.0-linux-gnu	hppa		hppa
