@@ -1,3 +1,7 @@
+Tue Jan  1 14:10:55 CET 2002 Wichert Akkerman <wakkerma@debian.org>
+
+  * archtable, scripts/dpkg-architecture.pl: Update SuperH architecture
+
 Mon Dec 31 17:38:26 CET 2001 Wichert Akkerman <wakkerma@debian.org>
 
   * dselect/main.cc, main/main.c, main/query.c: no longer set LC_CTYPE
